# ComputerNetworks_WisielecGame

./: .gitignore  ADMIN_DEBUG_GUIDE.md  ADMIN_FEATURES.md  README.md  gamer.cpp  server.cpp
WisielecGameGUI/: CMakeLists.txt  adminlobbyscreen.cpp  adminlobbyscreen.h  adminloginscreen.cpp  adminloginscreen.h  gamecontroller.cpp  gamecontroller.h  gameendscreen.cpp  gameendscreen.h  gamescreen.cpp  gamescreen.h  hangman.cpp  hangman.h  lobbyscreen.cpp  lobbyscreen.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  startscreen.cpp  startscreen.h  waitingroomscreen.cpp  waitingroomscreen.h
client/: ClientConnection.cpp  ClientConnection.h  client  client.cpp  client.h  main.cpp
common/: messages.h  net.cpp  protocol.h  states.h
include/: messages.h  net.cpp  net.hpp  protocol.h  states.h  wordlist.c  wordlist.h
server/: CMakeLists.txt  client.h  game.h  handlers  server.cpp  server_debug
